# Kursownia

./: .dockerignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
Kursownia/: __init__.py  __main__.py  commands.py  keyboards.py  main.py  responses.py
Kursownia/currency/: models.py  parser.py
Kursownia/rate/: bank_list.yaml  test_updater.py  updater.py
Kursownia/rates/: local_storage.py  rate_getter.py
docs/: local_env.md  tg_bot.md
src/: .drone.yaml  Dockerfile
src/helm/Kursownia/: Chart.yaml  values.yaml
src/helm/kursownia/: Chart.yaml  values.yaml
src/helm/kursownia/templates/: deployment.yaml
tests/: parser.py  test_curr_getter.py  test_currency_model.py  test_storage.py
