[tool.poetry]
name = "kursownia"
version = "0.0.1"
description = "Telegram bot for check currency exchange rate"
authors = ["Maksim Surmach <maxsurm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
