[tool.poetry]
name = "kursownia"
version = "0.0.1"
description = "Telegram bot for check currency exchange rate"
authors = ["Maksim Surmach <maxsurm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.13.0"
pydantic = "^2.3.0"
aiohttp = "^3.8.5"
aioschedule = "^0.5.2"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
