[tool.poetry]
name = "kursownia"
version = "1.1.0"
description = "Telegram bot for check currency exchange rate"
authors = ["Maksim Surmach <maxsurm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.13.0"
aiohttp = "^3.8.5"
pytest = "^7.4.2"
xmltodict = "^0.13.0"
telebot = "^0.0.5"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
